--- a/Todos/package.json
+++ b/Todos/package.json
@@ -1,7 +1,6 @@
 {
   "name": "Todos",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,5 +20,6 @@
     "redux": "^4.0.5",
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0"
-  }
+  },
+  "description": ""
 }
