--- a/Todos/.gitignore
+++ b/Todos/.gitignore
@@ -5,3 +5,9 @@ bundle.js
 bundle.js.map
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/tmp/*
+/log/*
+vendor
+!/log/.keep
+!/tmp/.keep
+/storage/*
